# emp-ot

./: CMakeLists.txt
emp-ot/: base.cc  base.h  co.h  emp-ot.h  ferret.h  iknp.h  link.h  lpn_error.h  point.cc  sparse_linear_code.h
emp-ot/ferret/: base_cot.h  constants.h  dpf.h  error.h  ferret.h  ferret_cot.h  ferret_cot.hpp  gtprg.h  link.h  lpn_error.h  lpn_error_point.h  lpn_f2.h  mpcot_reg.h  preot.h  role.h  sparse_linear_code.h  spcot.h  spcot_recver.h  spcot_sender.h  twokeyprp.h
src/: base.cc  base.h  co.h  cot.h  ferret.h  gthash.h  gtprg.h  gtprp.h  iknp.h  link.h  lpn_error.h  point.cc  point.h  sparse_linear_code.h
test/: bench_lpn.cpp  ferret.cpp  ot.cc  ot.cpp  test.h
